# ntkpr

./: .gitignore  .goreleaser.yaml  README.md  go.mod  go.sum  main.go  mantis  s.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yaml
_spare/: go.mod  main.go
agent/: database.db  main.py  requirements.txt  start_server.sh
agent/LLM/: agent.py
agent/db/: db.py  models.py
agent/qdrant_storage/: raft_state.json
app/state/: appstate.go
client/: .gitignore  LICENSE  go.sum
client-ai/: go.mod  main.go
client/cmd/: root.go  ui.go
client/db/: utils.go
client/defs/: db.go  msg.go
client/main/: daily.db  notes.db
cmd/: commands.go  root.go  tui.go  ui.go  utils.go
controllers/: app.go  cursor.go  view.go
controllers/db_controller/: db-controller.go  getters.go  initializers.go  lazysync.go  modifiers.go  setters.go
db/: data_structs.go  db.go  dbs.go  utils.go
defs/: db.go  msg.go  tui.go
gui/: README.md  db-utils.go  gui-utils.go  gui.go  init.go  keybinding.go  keyhandlers.go  layout.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  view-utils.go  views.go
main/: daily.db  main.go  mantis  notes.db
mcp/client/: client.py  main.py  multi_agent.py  pyproject.toml  single_agent.py
models/: cursor.go  db.go  keybinder.go  tui.go  views.go
mts/: go.mod  go.sum
ntkpr/: build.sh  go.mod  go.sum  main.go
tui/: init.go  tui.go  utils.go
ui/: cmd-input.go  commands.go  cursor.go  init.go  keybindings.go  layout.go  note-history.go  note.go  utils.go
(+258 files in other folders)
