[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "mcp>=1.13.0",
    "ollama>=0.5.3",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
]
